# scamofbot

./: .gitignore  README.md  aerich.ini  config.py.example  pyproject.toml  requirements.txt  start.sh
app/: __main__.py  aerich.py  models.py  telegram.py
app/poll/: models.py  telegram.py
bot/: __main__.py  aerich.py  logconfig.py  models.py  telegram.py  util.py
bot/poll/: models.py  telegram.py
migrations/models/: 0_20210621105109_init.sql
